--- a/presentations/index.adoc
+++ b/presentations/index.adoc
@@ -3,44 +3,44 @@
 == Presentations
 
 .Basics
-* link:./overview.html[Overview]
-* link:./installation.html[Installation]
-* link:./basic-types.html[Basic Types]
-* link:./data-structures.html[Data Structures]
-* link:./mutability.html[Mutability]
-* link:./ownership.html[Ownership]
-* link:./ownership-borrowing-in-brief.html[Ownership & Borrowing]
-* link:./control-flow.html[Control Flow]
-* link:./little-helpers.html[Little Helpers]
-* link:./strings.html[Strings]
-* link:./drop-panic-abort.html[Drop, Panic, Abort]
+* link:./overview/slides.html[Overview]
+* link:./installation/slides.html[Installation]
+* link:./basic-types/slides.html[Basic Types]
+* link:./data-structures/slides.html[Data Structures]
+* link:./mutability/slides.html[Mutability]
+* link:./ownership/slides.html[Ownership]
+* link:./ownership-borrowing-in-brief/slides.html[Ownership & Borrowing]
+* link:./control-flow/slides.html[Control Flow]
+* link:./little-helpers/slides.html[Little Helpers]
+* link:./strings/slides.html[Strings]
+* link:./drop-panic-abort/slides.html[Drop, Panic, Abort]
 
-* link:./borrowing.html[Borrowing]
-* link:./iterators.html[Iterators]
+* link:./borrowing/slides.html[Borrowing]
+* link:./iterators/slides.html[Iterators]
 
-* link:./functions.html[Functions]
-* link:./borrowing.html[Borrowing]
-* link:./stack-and-heap.html[Stack and Heap]
-* link:./error-handling.html[Error Handling]
-* link:./testing.html[Testing]
-* link:./cargo.html[Cargo]
-* link:./generics-basics.html[Basic Generics]
+* link:./functions/slides.html[Functions]
+* link:./borrowing/slides.html[Borrowing]
+* link:./stack-and-heap/slides.html[Stack and Heap]
+* link:./error-handling/slides.html[Error Handling]
+* link:./testing/slides.html[Testing]
+* link:./cargo/slides.html[Cargo]
+* link:./generics-basics/slides.html[Basic Generics]
 
 .Advanced
-* link:./cargo.html[Cargo]
-* link:./traits.html[Traits]
-* link:./dynamic-dispatch.html[Dynamic Dispatch]
-* link:./advanced-generics-bounds.html[Advanced Generics]
-* link:./conversion-patterns.html[Conversions]
-* link:./closures.html[Closures]
-* link:./imports-modules-and-visibility.html[Imports, Modules, and Visibility]
-* link:./crates.html[Crates]
-* link:./libcore-and-libstd.html[libcore and libstd]
-* link:./std-lib-tour.html[The stdlib]
-* link:./iterators-again.html[Iterators Again]
-* link:./inner-mutability.html[Interior Mutability]
+* link:./cargo/slides.html[Cargo]
+* link:./traits/slides.html[Traits]
+* link:./dynamic-dispatch/slides.html[Dynamic Dispatch]
+* link:./advanced-generics-bounds/slides.html[Advanced Generics]
+* link:./conversion-patterns/slides.html[Conversions]
+* link:./closures/slides.html[Closures]
+* link:./imports-modules-and-visibility/slides.html[Imports, Modules, and Visibility]
+* link:./crates/slides.html[Crates]
+* link:./libcore-and-libstd/slides.html[libcore and libstd]
+* link:./std-lib-tour/slides.html[The stdlib]
+* link:./iterators-again/slides.html[Iterators Again]
+* link:./inner-mutability/slides.html[Interior Mutability]
 
-* link:./wasm.html[WASM]
+* link:./wasm/slides.html[WASM]
 
 .Assignments
 
