--- a/assignments/result-option-assignment.adoc
+++ b/assignments/result-option-assignment.adoc
@@ -9,12 +9,12 @@ In this exercise, you will learn
 * how to read a file line by line.
 * how to count the number of lines in a file.
 
-Both the `Option` and `Result` are similar in way. Both have two variants, and
+Both the `Option` and `Result` are similar in a way. Both have two variants, and
 depending on what those variants are, the program may continue in a different way.
 
 The Option Type can have the variant `Some(<some other type>)` or `None`.
 It is used, when you have to handle optional values, for example if you want to
-be able to leave a field of a struct empty, go assign the option type to it.
+be able to leave a field of a struct empty.
 If the field has a value, it is `Some(<value>)`, if it is empty, it is `None`.
 
 The variants of the Result type are `Ok()` and `Err(e)`. It is used to handle errors.
